# codex-companion

./: .gitignore  README.md
codex-hooks-config/: hooks.json
companion-service/: package-lock.json  package.json
companion-service/hooks/: on-permission.js  on-post-tool-use.js  on-session-start.js  on-stop.js  on-user-prompt.js
companion-service/scripts/: smoke-test.js
companion-service/src/: event-log.js  http-server.js  index.js  mdns-advertiser.js  session-state.js  websocket-server.js
docs/: reference-projects.md
esp32-firmware/: BOARD_NOTES.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp32-firmware/main/: CMakeLists.txt  Kconfig.projbuild  companion_client.c  companion_client.h  companion_protocol.h  companion_ui.c  companion_ui.h  idf_component.yml  main.c  wifi_manager.c  wifi_manager.h
esp32-simulator/: app.js  index.css  index.html
